Fix bugs. Test APIs. #19
Fix auth header.
Fix UserList group filter.
Fix logout error case.
Add email input when create user.
Change class ErrorInfo.
