# src/views/navbar/index.ts
@@ -9,13 +9,13 @@ export class NavbarComponent extends Vue {
 
   async logout() {
     try {
-      await new UserApi().logoutUser();
       this.$store.commit('logout');
       this.$router.push({path: '/login'});
+      await new UserApi().logoutUser();
       this.$message.success('登出成功');
     } catch (e) {
-      let error: ErrorInfo = e.json();
-      this.$message.success('登出失败: ' + error.infos[0]);
+      let error: ErrorInfo = await e.json();
+      this.$message.error('登出失败: ' + error.info);
     }
   }
 }
